# mempalace_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REMAINING.md  benchmark_500_direct.txt  benchmark_500_full.txt  benchmark_500_results.txt  install.ps1  install.sh  port.txt
.beads/: .gitignore  issues.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  test.yml
crates/bench/: Cargo.toml
crates/bench/src/: dataset.rs  lib.rs  longmemeval_fetch.rs  longmemeval_harness.rs  main.rs  metrics.rs  runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: bench_miner.rs  bench_palace_db.rs  bench_search.rs
crates/core/benches/common/: mod.rs
crates/core/src/: access_tracker.rs  audit.rs  auto_forget.rs  background.rs  bm25.rs  branch_aware.rs  cascade.rs  cascade_retrieval.rs  claude_bridge.rs  cli.rs  closet_llm.rs  clusters.rs  compress.rs  compress_file.rs  compress_synthetic.rs  config.rs  consolidation.rs  consolidation_pipeline.rs  constants.rs  context.rs  convo_miner.rs  corpus_origin.rs  crystallize.rs  dedup.rs  dedup_window.rs  dialect.rs  diary_ingest.rs  doctor.rs  drawer_store.rs  enrich.rs  entity_detector.rs  entity_registry.rs  event_capture.rs  evict.rs  exporter.rs  facets.rs  fact_checker.rs  file_index.rs  flow_compress.rs  general_extractor.rs  (+62 more)
crates/core/src/connect/: amp.rs  claude_code.rs  codex.rs  copilot_cli.rs  cursor.rs  droid.rs  gemini_cli.rs  json_mcp.rs  mod.rs  vscode.rs  windsurf.rs
crates/core/src/coordination/: actions.rs  artifacts.rs  checkpoints.rs  event_log.rs  file_reservations.rs  leases.rs  live_delivery.rs  mesh.rs  mod.rs  routines.rs  saturation.rs  signals.rs  team.rs
crates/core/src/embed/: clip_embedder.rs  cohere_remote.rs  embeddinggemma.rs  fastembed.rs  gemini_remote.rs  manifest.rs  mod.rs  model2vec.rs  null.rs  openai_remote.rs  openrouter_remote.rs  tract.rs  voyage_remote.rs
crates/core/src/export/: export_import.rs
crates/core/src/i18n/: be.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  mod.rs  pt-br.json  ru.json  zh-cn.json  zh-tw.json
crates/core/src/llm/: anthropic_provider.rs  circuit_breaker.rs  fallback_chain.rs  minimax_provider.rs  mod.rs  openai_compat_provider.rs  provider.rs
crates/core/src/mcp/: context_inject.rs  mod.rs
crates/core/src/notes/: mod.rs
crates/core/src/palace/: builder.rs  store.rs
crates/core/src/palace/store/: embedvec.rs  usearch_sqlite.rs
crates/core/src/plugins/: lifecycle.rs  mod.rs  skills.rs
crates/core/src/plugins/skills/commit-history/: SKILL.md
crates/core/src/plugins/skills/forget/: SKILL.md
crates/core/src/plugins/skills/handoff/: SKILL.md
crates/core/src/plugins/skills/recall/: SKILL.md
crates/core/src/plugins/skills/remember/: SKILL.md
crates/core/src/plugins/skills/session-history/: SKILL.md
crates/core/src/prompts/: compression.rs  consolidation.rs  graph_extraction.rs  mod.rs  vision.rs  xml.rs
crates/core/src/search/: cjk_segmenter.rs  diversify.rs  query_expansion.rs  reranker.rs  rrf.rs  smart_search.rs  synonyms.rs
crates/core/src/search_strategy/: bm25.rs  embedding.rs  fts5.rs  naive.rs  traits.rs
crates/core/src/vision/: embedding_provider.rs  image_quota.rs  image_refs.rs  image_store.rs  mod.rs  vision_search.rs
crates/core/tests/: cli_tests.rs  health_test.rs  parity_tests.rs  regression_fixes.rs  telemetry_test.rs
crates/core/tests/common/: mod.rs
docs/: ARCHITECTURE.md  MCP_TOOLS.md  PUBLIC_API.md  masterplan.md
docs/parity/: APPROVED_DEVIATIONS.md  GATE_STATUS.json  PARITY_GATE.md  PARITY_REPORT.md
docs/plan/: MASTER_PLAN_AGENTMEMORY_PARITY_v0.3.md
docs/research/: 00_UPGRADE_AND_INTEGRATION_PLAN.md  01_external_rust_memory_libs.md  02_memory_architectures_papers.md  03_jcode_memory_internals.md  04_mempalace_internals_and_gaps.md  05_embedding_and_storage_native.md  06_agentmemory_repo_analysis.md  06_phase0_longmemeval_baseline.md  07_longmemeval_baseline_v030.md  08_longmemeval_v030_rrf_tuned.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
instructions/: help.md  init.md  mine.md  search.md  status.md
integrations/filesystem-watcher/: README.md  bin.mjs  package.json  watcher.mjs
integrations/hermes/: README.md  SETUP.md  __init__.py  bridge.py  plugin.yaml
integrations/openclaw/: SKILL.md
integrations/pi/: README.md  index.ts  package.json  security.ts
issues_batch/: config_drop_fields.md  data_loss_corruption.md  embedder_bugs.md  json_mcp_data_loss.md  lock_unwrap_poison.md  misc_bugs.md
plans/260410-0155-exact-python-parity/: phase-01-baseline-parity-matrix.md  phase-01-policy-decisions.md  phase-02-storage-search-and-project-miner-parity.md  phase-03-conversation-cli-and-onboarding-parity.md  phase-04-mcp-entity-hooks-instructions-config-parity.md  phase-05-compression-and-verification-parity.md  phase-06-conditional-docs-sync-and-release-acceptance.md  plan.md
plugin/: .mcp.copilot.json  .mcp.json  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/hooks/: hooks.codex.json  mempal_hook.sh  mempal_precompact_hook.sh
plugin/opencode/: README.md  agentmemory-capture.ts  mempalace-capture.ts  plugin.json
plugin/scripts/: notification.mjs  post-commit.mjs  post-tool-failure.mjs  post-tool-use.mjs  pre-compact.mjs  pre-tool-use.mjs  prompt-submit.mjs  session-end.mjs  session-start.mjs  stop.mjs  subagent-start.mjs  subagent-stop.mjs  task-completed.mjs
scripts/: file_beads_phase56.py  file_beads_upgrade_plan.py
specs/: 2026-06-21-80-test-looper-integration-test.md
website/: pnpm-lock.yaml  pnpm-workspace.yaml
website/.vitepress/: config.mts
website/concepts/: aaak-dialect.md  knowledge-graph.md  memory-stack.md  the-palace.md
website/guide/: claude-code.md  configuration.md  gemini-cli.md  getting-started.md  hooks.md  local-models.md  mcp-integration.md  mining.md  openclaw.md  searching.md
website/reference/: api-reference.md  benchmarks.md  cli.md  contributing.md  mcp-tools.md  modules.md  (+1 more)
(+16 files in other folders)
