[workspace]
members = [
    "crates/core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["milla-jovovich"]
license = "MIT"
repository = "https://github.com/quangdang46/mempalace_rust"
description = "Give your AI a memory — mine projects and conversations into a searchable palace."

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
regex = "1.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
directories = "6.0"
walkdir = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
charset = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1"

tempfile = "3.13"
mockall = "0.13"
tokio-test = "0.4"
