[package]
name = "mempalace-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[dependencies]
mempalace-core = { path = "../core", features = ["embed-fastembed"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }

# `mempalace-bench` keeps its existing main.rs (synthetic embedding harness
# from the original port) while `longmemeval-bench` (mp-003) lives under
# src/bin/ as the production-path reproducer. Declaring both explicitly
# stops cargo from silently auto-discovering anything else under src/bin/.
[[bin]]
name = "mempalace-bench"
path = "src/main.rs"

[[bin]]
name = "longmemeval-bench"
path = "src/bin/longmemeval-bench.rs"

[dev-dependencies]
tempfile = { workspace = true }
