[package]
name = "mempalace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[[bin]]
name = "mpr"
path = "src/main.rs"

[features]
default = ["embed-fastembed"]
embed-fastembed = ["mempalace-core/embed-fastembed"]

[dependencies]
mempalace-core = { path = "../core", default-features = false }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = { workspace = true }
