[package]
name = "mempalace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[[bin]]
name = "mpr"
path = "src/main.rs"

[features]
default = ["embed-fastembed"]
full = ["mempalace-core/full"]
embed-fastembed = ["mempalace-core/embed-fastembed"]
embed-model2vec = ["mempalace-core/embed-model2vec"]
embed-tract = ["mempalace-core/embed-tract"]
llm-openai = ["mempalace-core/llm-openai"]
llm-anthropic = ["mempalace-core/llm-anthropic"]
vision = ["mempalace-core/vision"]
rerank = ["mempalace-core/rerank"]
health = ["mempalace-core/health"]
http-server = ["mempalace-core/http-server"]

[dependencies]
mempalace-core = { path = "../core", default-features = false }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = { workspace = true }
