[package]
name = "mempalace-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
# Default ships with `embed-fastembed` so the binary works out-of-the-box
# without any extra configuration (ADR-1, 05 §A.4 / §C.2 PR 2). Disable
# default features to opt into a different embedder backend (e.g.
# `embed-tract`, `embed-model2vec`) or `NullEmbedder` for tests.
default = ["embed-fastembed"]
store-usearch = ["dep:usearch"]
# `fastembed-rs` 4.x. Loads BGE / multilingual-E5 / Nomic / MxBai / etc.
# via the `ort` C++ ONNX Runtime. See `crates/core/src/embed/fastembed.rs`
# for the `FastEmbedEmbedder` adapter and `crates/core/src/embed/mod.rs`
# for `MEMPALACE_EMBED_MODEL` env-var → `EmbeddingModel` enum mapping
# (mp-012, mp-018).
embed-fastembed = ["dep:fastembed"]
# `model2vec-rs`. Pure-Rust static embedding (Model2Vec technique).
# Lightweight alternative to fastembed for low-power machines.
# Sub-ms inference. See `crates/core/src/embed/model2vec.rs` (mp-013).
embed-model2vec = ["dep:model2vec-rs"]
# `tract-onnx` for TractEmbedder (mp-014). Pure-Rust ONNX inference
# without the `ort` C++ library. Suitable for Model2Vec/SentenceTransformers
# ONNX exports.
embed-tract = ["dep:tract-onnx", "dep:tokenizers", "dep:ndarray"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
charset = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rmcp = { version = "1.3", features = ["transport-io"] }
embedvec = "0.5"
edgebert = "0.4"
unicode-script = "0.5"
signal-hook = "0.3"
async-trait = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }

# `fastembed-rs` powers `FastEmbedEmbedder` behind feature
# `embed-fastembed` (mp-012). Pulls in `ort` (C++ ONNX Runtime) and
# `tokenizers`. Disable via `--no-default-features` for builds that
# need a pure-Rust embedder (e.g. `embed-tract` from mp-014) or the
# `NullEmbedder` test backend.
fastembed = { version = "4", optional = true }

# `model2vec-rs` powers `Model2VecEmbedder` behind feature
# `embed-model2vec` (mp-013). Pure-Rust static embedding models.
model2vec-rs = { version = "0.2", optional = true }

# `tract-onnx` for `TractEmbedder` behind feature `embed-tract` (mp-014).
# Pure-Rust ONNX inference without the `ort` (ONNX Runtime) C++ lib.
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }

# `usearch` for `UsearchSqliteStore` behind feature `store-usearch` (mp-085).
# mmap'd HNSW index with SIMD + optional PQ/SQ8 quantisation.
usearch = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_palace_db"
harness = false

[[bench]]
name = "bench_miner"
harness = false
