[package]
name = "mempalace-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["embed-fastembed", "cjk-jieba"]
store-usearch = ["dep:usearch"]
embed-fastembed = ["dep:fastembed"]
embed-model2vec = ["dep:model2vec-rs"]
embed-tract = ["dep:tract-onnx", "dep:tokenizers", "dep:ndarray"]
# Remote OpenAI-compatible embedding provider (G2). Uses the already-present
# `reqwest` dep; gated so builds opt in to outbound embedding API calls.
embed-openai = []
# Voyage AI remote embedding provider. Reuses `reqwest`; gated so builds
# opt in to outbound embedding API calls.
embed-voyage = []
# Remote OpenRouter embedding provider. OpenRouter exposes an
# OpenAI-compatible `/embeddings` endpoint that proxies to many upstream
# models (OpenAI, Cohere, Voyage, ...). Uses the already-present
# `reqwest` dep; gated so builds opt in to outbound embedding API calls.
embed-openrouter = []
# Remote Google Gemini embedding provider. Uses the already-present
# `reqwest` dep; gated so builds opt in to outbound embedding API calls.
embed-gemini = []
# Remote Cohere embedding provider. Uses the already-present
# `reqwest` dep; gated so builds opt in to outbound embedding API calls.
embed-cohere = []
# CLIP image embeddings via fastembed 4.x's `ImageEmbedding` (Xenova/clip-vit-base-patch32,
# 512-d, L2-normalised). Re-uses fastembed's `ort` so there is no version conflict with
# the text-embedder path. See `embed::clip_embedder::ClipImageEmbedder` for the API.
embed-clip = ["embed-fastembed"]
# True Chinese word segmentation via jieba-rs (1:1 with agentmemory's
# jieba/tiny-segmenter). When disabled, falls back to script-boundary
# splitting via `unicode-script` (the default).
cjk-jieba = ["dep:jieba-rs"]
sync = []
llm-openai = []
llm-anthropic = []
coordination = []
vision = []
rerank = []
full = ["llm-openai", "llm-anthropic", "coordination", "vision", "rerank"]
telemetry = ["dep:metrics-exporter-prometheus", "dep:metrics"]
health = ["dep:sysinfo"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
charset = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rmcp = { version = "1.3", features = ["transport-io"] }
embedvec = "0.5"
edgebert = "0.4"
unicode-script = "0.5"
jieba-rs = { version = "0.10", optional = true }
signal-hook = "0.3"
async-trait = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
bm25 = { version = "2.3", default-features = false, features = ["default_tokenizer"] }
sysinfo = { version = "0.32", optional = true }
rand = { workspace = true }

# Prometheus exporter for metrics (telemetry feature).
metrics-exporter-prometheus = { version = "0.16", optional = true }
# metrics facade 0.24 — the public API surface.
metrics = { version = "0.24", optional = true }

# `fastembed-rs` powers `FastEmbedEmbedder` behind feature
# `embed-fastembed` (mp-012). Pulls in `ort` (C++ ONNX Runtime) and
# `tokenizers`. Disable via `--no-default-features` for builds that
# need a pure-Rust embedder (e.g. `embed-tract` from mp-014) or the
# `NullEmbedder` test backend.
fastembed = { version = "4", optional = true }

# `model2vec-rs` powers `Model2VecEmbedder` behind feature
# `embed-model2vec` (mp-013). Pure-Rust static embedding models.
model2vec-rs = { version = "0.2", optional = true }

# `tract-onnx` for `TractEmbedder` behind feature `embed-tract` (mp-014).
# Pure-Rust ONNX inference without the `ort` (ONNX Runtime) C++ lib.
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }

# `usearch` for `UsearchSqliteStore` behind feature `store-usearch` (mp-085).
# mmap'd HNSW index with SIMD + optional PQ/SQ8 quantisation.
usearch = { workspace = true, optional = true }

# Note: open_clip_inference is not added as a dependency because it conflicts
# with fastembed's ort version. For CLIP image embeddings, use embed-clip feature
# after resolving the ort version conflict (requires ort 2.0.0-rc.5 vs 2.0.0-rc.12).

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_palace_db"
harness = false

[[bench]]
name = "bench_miner"
harness = false
